--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.format_sql = true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
